# golem

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  .gitignore  PKGBUILD  update-pkgbuild.sh
src/: banner.rs  commands.rs  consts.rs  events.rs  lib.rs  main.rs  spinner.rs
src/auth/: mod.rs  oauth.rs  storage.rs
src/commands/: help.rs  login.rs  logout.rs  mod.rs  model.rs  new.rs  quit.rs  tokens.rs  tools.rs  whoami.rs
src/config/: mod.rs
src/engine/: mod.rs  react.rs
src/memory/: mod.rs  sqlite.rs
src/prompts/: mod.rs  react.rs
src/thinker/: anthropic.rs  human.rs  mock.rs  mod.rs
src/tools/: mod.rs  shell.rs
tests/: auth_test.rs  memory_test.rs  react_test.rs  tools_test.rs
