[package]
name = "golem"
version = "0.8.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.5.58", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.32"
open = "5.3.3"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.25.0"
